--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -40,8 +40,19 @@
           gap: 30px;
           justify-content: space-between;
 
+          .selectRooms{
+            width: 100%;
+
+            select{
+              width: 100%;
+              padding: 10px;
+            }
+          }
+
           .formInput {
             width: 40%;
+
+
 
             label {
               display: flex;
